fix: fixing text alignment

--- a/frontend/src/components/Header/HeaderTextSlider/HeaderTextSlider.css
+++ b/frontend/src/components/Header/HeaderTextSlider/HeaderTextSlider.css
@@ -1,5 +1,4 @@
 p{
-    padding: 14px;
     font-weight:bold ;
     text-align: center;
     background-color: rgba(231, 231, 231, 0.504);
